--- a/weather/index.html
+++ b/weather/index.html
@@ -14,7 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <title>Weather</title>
 </head>
 
