--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             />
           </a>
         </div>
-        <div class="small"></div>
+        <div class="small">
+          <a href="https://bodiavaleur.github.io/shoplistapp">
+            <img src="./shoplist/preview.jpg" alt="shoplistapp" />
+          </a>
+        </div>
         <div class="small">
           <a href="./gradient generator/index.html">
             <img
