--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
             <img src="./airsales/preview.png" alt="airsales" />
           </a>
         </div>
-        <div class="small"></div>
-        <div class="large"></div>
+        <div class="small">
+          <a href="https://bodiavaleur.github.io/ifinum">
+            <img src="./ifinum/preview.png" alt="ifinum" />
+          </a>
+        </div>
+        <div class="large">
+          <a href="https://bodiavaleur.github.io/diamond">
+            <img src="./diamond/preview.png" alt="diamond" />
+          </a>
+        </div>
         <div class="tall"></div>
         <div class="big"></div>
         <div class="large"></div>
